# argos3-prototype2

src/core/simulator/entity/: embodied_entity.cpp
src/core/utility/math/: quaternion.h
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/prototype/: CMakeLists.txt
src/plugins/robots/prototype/control_interface/: ci_cameras_sensor.cpp  ci_cameras_sensor.h  ci_cameras_sensor_algorithm.h  ci_prototype_electromagnets_actuator.cpp  ci_prototype_electromagnets_actuator.h  ci_prototype_joints_actuator.cpp  ci_prototype_joints_actuator.h  ci_prototype_joints_sensor.cpp  ci_prototype_joints_sensor.h  ci_prototype_proximity_sensor.cpp  ci_prototype_proximity_sensor.h  ci_prototype_radios_actuator.cpp  ci_prototype_radios_actuator.h  ci_prototype_radios_sensor.cpp  ci_prototype_radios_sensor.h
src/plugins/robots/prototype/control_interface/ci_cameras_sensor_algorithms/: ci_cameras_sensor_leddetector_algorithm.cpp  ci_cameras_sensor_leddetector_algorithm.h  ci_cameras_sensor_tagdetector_algorithm.cpp  ci_cameras_sensor_tagdetector_algorithm.h
src/plugins/robots/prototype/simulator/actuators/: prototype_electromagnets_default_actuator.cpp  prototype_electromagnets_default_actuator.h  prototype_joints_default_actuator.cpp  prototype_joints_default_actuator.h  prototype_leds_default_actuator.cpp  prototype_leds_default_actuator.h  prototype_radios_default_actuator.cpp  prototype_radios_default_actuator.h
src/plugins/robots/prototype/simulator/entities/: camera_entity.cpp  camera_entity.h  camera_equipped_entity.cpp  camera_equipped_entity.h  electromagnet_entity.cpp  electromagnet_entity.h  electromagnet_equipped_entity.cpp  electromagnet_equipped_entity.h  frame_entity.cpp  frame_entity.h  frame_equipped_entity.cpp  frame_equipped_entity.h  joint_entity.cpp  joint_entity.h  joint_equipped_entity.cpp  joint_equipped_entity.h  link_entity.cpp  link_entity.h  link_equipped_entity.cpp  link_equipped_entity.h  prototype_entity.cpp  prototype_entity.h  prototype_led_equipped_entity.cpp  prototype_led_equipped_entity.h  prototype_proximity_sensor_equipped_entity.cpp  prototype_proximity_sensor_equipped_entity.h  radio_entity.cpp  radio_entity.h  radio_equipped_entity.cpp  radio_equipped_entity.h  tag_entity.cpp  tag_entity.h  tag_equipped_entity.cpp  tag_equipped_entity.h
src/plugins/robots/prototype/simulator/media/: radio_medium.cpp  radio_medium.h  tag_medium.cpp  tag_medium.h
src/plugins/robots/prototype/simulator/physics_models/: dynamics3d_prototype_model.cpp  dynamics3d_prototype_model.h  pointmass3d_prototype_model.cpp  pointmass3d_prototype_model.h
src/plugins/robots/prototype/simulator/sensors/: cameras_default_sensor.cpp  cameras_default_sensor.h  cameras_sensor_algorithm.h  prototype_joints_default_sensor.cpp  prototype_joints_default_sensor.h  prototype_proximity_default_sensor.cpp  prototype_proximity_default_sensor.h  prototype_radios_default_sensor.cpp  prototype_radios_default_sensor.h
src/plugins/robots/prototype/simulator/sensors/cameras_sensor_algorithms/: CMakeLists.txt
src/plugins/robots/prototype/simulator/sensors/cameras_sensor_algorithms/leddetector/: CMakeLists.txt  cameras_sensor_leddetector_algorithm.cpp  cameras_sensor_leddetector_algorithm.h
src/plugins/robots/prototype/simulator/sensors/cameras_sensor_algorithms/tagdetector/: CMakeLists.txt  cameras_sensor_tagdetector_algorithm.cpp  cameras_sensor_tagdetector_algorithm.h
src/plugins/robots/prototype/simulator/visualizations/: qtopengl_prototype.cpp  qtopengl_prototype.h
src/plugins/robots/prototype/utility/: box_geometry3.h  cylinder_geometry3.h  geometry3.h  sphere_geometry3.h
src/plugins/simulator/physics_engines/dynamics3d/: CMakeLists.txt  dynamics3d_body.cpp  dynamics3d_body.h  dynamics3d_box_model.cpp  dynamics3d_box_model.h  dynamics3d_cylinder_model.cpp  dynamics3d_engine.cpp  dynamics3d_engine.h  dynamics3d_joint.cpp  dynamics3d_joint.h  dynamics3d_model.h  dynamics3d_multi_body_object_model.cpp  dynamics3d_multi_body_object_model.h  dynamics3d_plugin.h  dynamics3d_shape_manager.cpp  dynamics3d_shape_manager.h  dynamics3d_single_body_object_model.cpp  dynamics3d_single_body_object_model.h
src/plugins/simulator/physics_engines/dynamics3d/bullet/BulletDynamics/Featherstone/: btMultiBody.cpp
src/plugins/simulator/physics_engines/dynamics3d/plugins/: CMakeLists.txt
src/plugins/simulator/physics_engines/dynamics3d/plugins/gravity/: CMakeLists.txt  dynamics3d_gravity_plugin.cpp  dynamics3d_gravity_plugin.h
src/plugins/simulator/physics_engines/dynamics3d/plugins/magnetism/: CMakeLists.txt  dynamics3d_magnetism_plugin.cpp  dynamics3d_magnetism_plugin.h
src/plugins/simulator/physics_engines/dynamics3d/sphere/: dynamics3d_sphere_model.cpp  dynamics3d_sphere_model.h
src/plugins/simulator/visualizations/qt-opengl/: qtopengl_widget.cpp
src/scripts/: gdbinit.in
src/testing/argos/: 3d_object_testing.argos  multibody_testing.argos
